--- a/order_service/Dockerfile
+++ b/order_service/Dockerfile
@@ -3,12 +3,10 @@ FROM python:3.11-slim
 WORKDIR /app
 ENV PYTHONPATH=/app
 
-COPY order_service/requirements.txt .
-
+COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY log_to_queue.py .
+COPY order_service/ ./order_service/
 
-COPY order_service/ .
-
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["uvicorn", "order_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
