--- a/delivery_service/Dockerfile
+++ b/delivery_service/Dockerfile
@@ -11,4 +11,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY log_to_queue.py .
 COPY delivery_service/ ./delivery_service/
 
-CMD ["uvicorn", "delivery_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn delivery_service.main:app --host 0.0.0.0 --port ${PORT:-80}"]
