--- a/restaurant_service/Dockerfile
+++ b/restaurant_service/Dockerfile
@@ -1,6 +1,8 @@
 FROM python:3.11-slim
 
 WORKDIR /app
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
 ENV PYTHONPATH=/app
 
 COPY restaurant_service/requirements.txt .
@@ -9,4 +11,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 COPY log_to_queue.py .
 COPY restaurant_service/ ./restaurant_service/
 
-CMD ["uvicorn", "restaurant_service.main:app", "--host", "0.0.0.0", "--port", "8000"]
+CMD ["sh", "-c", "uvicorn restaurant_service.main:app --host 0.0.0.0 --port ${PORT:-80}"]
