--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,8 +27,10 @@ jobs:
 
       - name: Install dependencies for tests
         run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+                pip install -r order_service/requirements.txt
+                pip install -r delivery_service/requirements.txt
+                pip install -r restaurant_service/requirements.txt
+                pip install -r requirements.txt
 
       - name: Set PYTHONPATH for imports
         run: echo "PYTHONPATH=$GITHUB_WORKSPACE" >> $GITHUB_ENV
